--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,6 @@ p {
     background-image: url(../assets_day1/img/wall.png);
     height: 150px;
 }
-
 .myheader-title {
     display: flex;
     align-items: center;
@@ -73,11 +72,46 @@ p {
 
 .svg {
     position: absolute;
+    z-index: 2;
     height: 35px;
     top: -15px;
     left: 50%;
     transform: translate(-50%);
 }
+
+.overlay{
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100vh;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgb(0, 0, 0, 0.5);
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    z-index: 50;
+}
+
+.overlay.show{
+    display: flex;
+}
+
+.overlay-content{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    width: 500px;
+    height: 150px;
+    z-index: 100;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+}
+
 
 @media screen and (max-width: 800px){
     .col{
